--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,8 @@
 
     <meta name="description" content="Agence La Panthère - agence web basée à Lyon. Web design, refonte de site web, optimisation SEO, Nous souhaitons aider les entreprises à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
-	<link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin />
-	<link rel="preload" href="./css/et-line.min.css">
-	<link rel="preload" href="style.css" as="style" />
+	<link rel="preload" href="./css/et-line.min.css" as="style">
+	<link rel="preload" href="style.css" as="style">
 	<link rel="preload" as="image" href="img/1.webp">
 	<link rel="preload" as="image" href="img/2.webp">
 	<link rel="preload" as="image" href="img/3.webp">
@@ -24,11 +23,12 @@
 	<link rel="preload" as="image" href="img/lines-h2-bg.webp">
 	<link rel="preload" as="image" href="img/logo.webp">
 	<link rel="preload" as="image" href="img/texture-paper.webp">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
-	<link rel="preload" as="script" src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
-	<link rel="preload" as="script" src="./js/blocs.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+	<link rel="preload" as="script" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
+	<link rel="preload" as="script" href="./js/blocs.min.js">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,11 +42,11 @@
 <main class="page-container">
     
 <!-- bloc-0 -->
-<section class="bloc bgc-white l-bloc " id="bloc-0">
+<div class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -65,7 +65,7 @@
 			</div>
 		</nav>
 	</div>
-</section>
+</div>
 <!-- bloc-0 END -->
 
 <!-- bloc-6 -->
@@ -87,47 +87,24 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section class="bloc bgc-white l-bloc" id="bloc-7">
+<div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
-					<div class="form-group">
-						<label>
-							Nom
-						</label>
-						<input id="name" class="form-control" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Adresse email
-						</label>
-						<input id="email" class="form-control" type="email" required />
-					</div>
-					<div class="form-group">
-						<label>
-							Comment nous avez-vous connu ?
-						</label>
-						<input class="form-control" type="email" required id="input_504" />
-					</div>
-					<div class="form-group">
-						<label>
-							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
-				</form>
-			</div>
-			<div class="col-sm-6">
-				<p>
-					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
-				</p>
-			</div>
+			<form id="form_1">
+				<div class="form-group"><label for="name">Nom</label><input id="name" class="form-control" required></div>
+				<div class="form-group"><label for="email">Adresse email</label><input id="email" class="form-control" type="email" required></div>
+				<div class="form-group"><label for="input_504">Comment nous avez-vous connu ?</label><input class="form-control" type="email" required id="input_504"></div>
+				<div class="form-group"><label for="message">Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label><textarea id="message" class="form-control" rows="20" cols="50" required></textarea></div>
+				<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">Envoyer</button>
+				<ul>
+					<li>contact@agencelapanthere.com</li>
+						<li>2 place Sathonay 69001 Lyon</li>
+						<li>Ouvert de 9h à 18h, du lundi au vendredi</li>
+				</ul>
+			</form>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
