--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
     <meta name="description" content="Agence La Panthère - agence web basée à Lyon. Web design, refonte de site web, optimisation SEO, Nous souhaitons aider les entreprises à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
-	<link rel="preload" href="fonts/et-line.woff" as="font" type="font/woff" crossorigin />
-	<link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="preload" href="./css/et-line.min.css">
-	<link rel="preload" href="style.css" as="style" />
+	<link rel="preload" href="./css/et-line.min.css" as="style">
+	<link rel="preload" href="style.css" as="style">
 	<link rel="preload" as="image" href="img/1.webp">
 	<link rel="preload" as="image" href="img/2.webp">
 	<link rel="preload" as="image" href="img/3.webp">
@@ -25,11 +23,12 @@
 	<link rel="preload" as="image" href="img/lines-h2-bg.webp">
 	<link rel="preload" as="image" href="img/logo.webp">
 	<link rel="preload" as="image" href="img/texture-paper.webp">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
-	<link rel="preload" as="script" src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js">
-	<link rel="preload" as="script" src="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
-	<link rel="preload" as="script" src="./js/blocs.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js">
+	<link rel="preload" as="script" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.19/jquery.touchSwipe.min.js">
+	<link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/gmaps.js/0.4.25/gmaps.min.js">
+	<link rel="preload" as="script" href="./js/blocs.min.js">
 
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -47,7 +46,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo de la meilleur agence web" width="488" height="90" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.webp" alt="Lyon web design logo de la meilleur agence web" width="488" height="90"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -72,7 +71,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Agence La Panthère, agence web Lyon, création logo Lyon" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100" alt="Agence La Panthère, agence web Lyon, création logo Lyon">
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
@@ -162,7 +161,7 @@
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-					<img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+					<img src="img/1.webp" width="270" height="275" alt="Lyon web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb">
 				</a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -173,7 +172,7 @@
 			</section>
 			<section class="col-sm-6">
 				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-					<img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes" />
+					<img src="img/2.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour photographes">
 				</a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -185,7 +184,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -194,7 +193,7 @@
 				</p>
 			</section>
 			<section class="col-sm-6">
-				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+				<a href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.webp" width="270" height="275" class="img-responsive portfolio-thumb" alt="Lyon web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
@@ -254,7 +253,7 @@
 					<section class="col-sm-4">
 						<h4 class="tc-white">Web design</h4>
 						<ul>
-							<li><a class="tc-white" class="tc-white" href="annuaireagence.com">annuaireagence.com</a></li>
+							<li><a class="tc-white" href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a class="tc-white" href="annuairemarketing.com">annuairemarketing.com</a></li>
 							<li><a class="tc-white" href="annuairewordpress.com">annuairewordpress.com</a></li>
 							<li><a class="tc-white" href="listeagence.com">listeagence.com</a></li>
